--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "antd": "^5.0.7",
     "eslint": "8.30.0",
     "eslint-config-next": "13.0.7",
+    "mobx": "^6.7.0",
+    "mobx-react-lite": "^3.4.0",
     "next": "13.0.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
