--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "18.11.17",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
+    "@types/superagent": "^4.1.16",
     "antd": "^5.0.7",
     "eslint": "8.30.0",
     "eslint-config-next": "13.0.7",
@@ -21,6 +22,9 @@
     "next": "13.0.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "superagent": "^8.0.6",
+    "superagent-intercept": "^0.1.2",
+    "swr": "^2.0.0",
     "typescript": "4.9.4"
   },
   "devDependencies": {
